--- a/selenium_wrapper/selenium_wrapper.csproj
+++ b/selenium_wrapper/selenium_wrapper.csproj
@@ -50,16 +50,13 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="attribute\ContainerAttribute.cs" />
     <Compile Include="attribute\ActionAttribute.cs" />
-    <Compile Include="attribute\ElementAttribute.cs" />
     <Compile Include="attribute\FrameAttribute.cs" />
-    <Compile Include="attribute\PageAttribute.cs" />
-    <Compile Include="Block.cs" />
+    <Compile Include="attribute\NameAttribute.cs" />
+    <Compile Include="Container.cs" />
     <Compile Include="Driver.cs" />
     <Compile Include="Element.cs" />
     <Compile Include="element\Input.cs" />
-    <Compile Include="Frame.cs" />
     <Compile Include="Page.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Session.cs" />
