--- a/test_selenium_wrapper/test_selenium_wrapper.csproj
+++ b/test_selenium_wrapper/test_selenium_wrapper.csproj
@@ -55,7 +55,11 @@
     </Otherwise>
   </Choose>
   <ItemGroup>
-    <Compile Include="Block.cs" />
+    <Compile Include="contaiters\Div.cs" />
+    <Compile Include="contaiters\Footer.cs" />
+    <Compile Include="contaiters\Header.cs" />
+    <Compile Include="contaiters\Sidebar.cs" />
+    <Compile Include="frames\ContentFrame.cs" />
     <Compile Include="pages\MainPage.cs" />
     <Compile Include="UnitTest1.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
@@ -69,6 +73,7 @@
   <ItemGroup>
     <None Include="packages.config" />
   </ItemGroup>
+  <ItemGroup />
   <Choose>
     <When Condition="'$(VisualStudioVersion)' == '10.0' And '$(IsCodedUITest)' == 'True'">
       <ItemGroup>
