--- a/selenium_wrapper/selenium_wrapper.csproj
+++ b/selenium_wrapper/selenium_wrapper.csproj
@@ -50,7 +50,7 @@
     <Compile Include="attribute\ElementAttribute.cs" />
     <Compile Include="attribute\FrameAttribute.cs" />
     <Compile Include="attribute\PageAttribute.cs" />
-    <Compile Include="Block.cs" />
+    <Compile Include="Container.cs" />
     <Compile Include="Driver.cs" />
     <Compile Include="Element.cs" />
     <Compile Include="element\Input.cs" />
