--- a/selenium_wrapper/selenium_wrapper.csproj
+++ b/selenium_wrapper/selenium_wrapper.csproj
@@ -36,6 +36,7 @@
       <Private>True</Private>
     </Reference>
     <Reference Include="System" />
+    <Reference Include="System.Configuration" />
     <Reference Include="System.Core" />
     <Reference Include="System.Drawing" />
     <Reference Include="System.Xml.Linq" />
@@ -53,19 +54,29 @@
     <Compile Include="attribute\ActionAttribute.cs" />
     <Compile Include="attribute\FrameAttribute.cs" />
     <Compile Include="attribute\NameAttribute.cs" />
+    <Compile Include="attribute\VerifyAttribute.cs" />
     <Compile Include="CollectionElement.cs" />
     <Compile Include="Container.cs" />
     <Compile Include="doc.cs" />
     <Compile Include="Driver.cs" />
     <Compile Include="Element.cs" />
+    <Compile Include="element\Button.cs" />
     <Compile Include="element\Input.cs" />
     <Compile Include="element\Select.cs" />
+    <Compile Include="element\Text.cs" />
     <Compile Include="Page.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Session.cs" />
+    <Compile Include="SessionSettings.cs" />
+    <Compile Include="UIElement.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="IEDriverServer.exe">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="..\packages\PostSharp.4.2.27\tools\PostSharp.targets" Condition="Exists('..\packages\PostSharp.4.2.27\tools\PostSharp.targets')" />
